<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/date"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <EditText
            android:id="@+id/start_date_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/start_date_required"
            android:autofillHints="false"/>

    <EditText
            android:id="@+id/end_date_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/end_date_optional"
            android:autofillHints="false"/>

</LinearLayout>