<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/fragment_meeting_event_creation"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <include
    layout="@layout/tab_home"
    android:layout_width="match_parent"
...
