...
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintTop_toBottomOf="@id/roll_call_guideline_horizontal">

      <EditText
        android:id="@+id/roll_call_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/roll_call_title_required"
        android:inputType="text"
        android:autofillHints="false" />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/confirm" />

      <Button
        android:id="@+id/roll_call_open"
        style="@style/Theme.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/roll_call_open_attendees" />
    </LinearLayout>
...
