...
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginVertical="@dimen/margin_top"
              android:visibility="gone">

          <include
                  android:id="@+id/properties_view"
                  layout="@layout/layout_properties"/>

          <include
                  android:id="@+id/properties_edit_view"
                  layout="@layout/layout_properties_edit"/>
      </ViewSwitcher>
...
