...
    <import type="android.view.View" />
    <variable
      name="viewmodel"
      type="com.github.dedis.popstellar.home.HomeViewModel" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_horizontal_tab"
      android:layout_width="match_parent"
...
